--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,13 +1,25 @@
 header {
-    height: 8.5rem;
-    background-color: var(--color-primary);
+    // height: 8.5rem;
+    // background-color: var(--color-primary);
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    background: var(--white);
+    height: 6.5rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    padding: 2rem 4rem;
+    border-bottom: 1px solid var(--gray-100);
+
     p {
         font-size: 3.5rem;
         margin: 0;
         font-weight: 700;
         
+        
+    }
+    span{
+        margin-left: auto;
+        text-transform: capitalize;
     }
 }
